src/components/Home/App.css
/* ... */
div {
  overflow: auto;
}

.left-element {
  background: whitesmoke;
  display: inline-block;
  float: left;
  width: max-content;
  height: 100%;
  box-shadow: 20px 20px 25px lightgray;
}

.mainpanel {
  margin-left: 5em;
  padding-left: 1em;
}

.right-element {
  display: inline-block;
  width: 100%;
  height: 100%;
}

.left-element-flip {
  background: white;
  display: inline-block;
  float: left;
  width: 15%;
  height: 100%;
  box-shadow: 20px 20px 25px lightgray;
}

.right-element-flip {
  background: whitesmoke;
  display: inline-block;
  width: 85%;
  height: 100%;
}

.logo {
  height: 100px;
  text-align: center;
  margin: auto;
  overflow: hidden;
  padding-bottom: 10px;;
}

.sidebarheader {
  margin-top: 2.5em;
  text-align: center;
  margin: auto;
  overflow: hidden;
}

.sidebar {
  padding-top: -25px;
}

.courselist {
  height: 100%;
  text-align: left;
  padding-bottom: 2.5em;
  padding-left: 1em;
  padding-right: 1em;
  overflow: hidden;
}

.sidebartoggle {
  position: fixed;
  width: 75px;
  height: 75px;
  top: 90%;
  border-radius: 100px;
  left: 15em;
  box-shadow: 0 10px 29px 0 rgb(112, 112, 112);
  outline:none;
}

.sidebartoggle:hover {
  background-color: #00233b;
  left: 14em;
  transition: 1s;
}

.flipimage {
  transform: rotate(180deg);
}

.smallsidebartoggle {
  position: fixed;
  width: 75px;
  height: 75px;
  top: 90%;
  border-radius: 100px;
  left: 1em;
  box-shadow: 0 10px 29px 0 rgb(112, 112, 112);
  outline:none;
}

.smallsidebartoggle:hover {
  background-color: #00233b;
  left: 2em;
  transition: 1s;
}

.sessionbar {
  height: 35px;
  text-align: center;
  margin: auto;
  overflow: hidden;
}

.namebar {
  padding-top: 10px;
  padding-bottom: 10px;
  height: 20px;
  text-align: center;
  margin: auto;
  overflow: hidden;
}

.courselistitem {
  /* border: 1px solid #003459; */
  background-color: white;
  color: #003459;
  padding-top: 15px;
  padding-bottom: 15px;
  font-size: medium;
  height: 20px;
  text-align: center;
  margin-top: 15px;
  overflow: auto;
  cursor: default;
  border-radius: 10px;
  box-shadow: 0 10px 29px 0 rgb(153, 153, 153);
}

.courselistitem:hover {
  background-color: whitesmoke;
  box-shadow: 0 10px 29px 0 rgb(112, 112, 112);
}

.addcourseitem {
  background-color: #003459;
  color: white;
  padding-top: 15px;
  padding-bottom: 15px;
  margin-left: 1em;
  width: 100%;
  font-size: medium;
  height: 20px;
  text-align: center;
  margin: auto;
  overflow: hidden;
  cursor: default;
  border-radius: 10px;
  /* box-shadow: 0 10px 29px 0 rgba(28, 36, 59, 0.1) */
  box-shadow: 0 10px 29px 0 rgb(153, 153, 153);
}

.addcourseitem:hover {
  background-color: #002136;
  box-shadow: 0 10px 29px 0 rgb(112, 112, 112);
  /* box-shadow: 0 10px 29px 0 rgba(28, 36, 59, 0.1) */
}

.moduleitem {
  margin-left: 0em;
  margin-top: 1em;
  margin-bottom: 1em;
  margin-right: 7em;
  max-height: 50px;
  box-shadow: 5px 10px 10px 0 rgb(201, 201, 201);
  overflow: hidden;
  border-radius: 10px;
  transition: 1s;
}

.moduleitem:focus {
  max-height: fit-content;
}

.addmoduleitem {
  margin-left: 0em;
  margin-top: 1em;
  margin-bottom: 1em;
  margin-right: 7em;
  max-height: 55px;
  padding-left: 1em;
  height: 55px;
  box-shadow: 5px 10px 10px 0 rgb(201, 201, 201);
  overflow: hidden;
  background-color: #003459;
  border-radius: 10px;
}

.activemoduleitem {
  margin-left: 0em;
  margin-top: 1em;
  margin-bottom: 2em;
  margin-right: 7em;
  max-height: fit-content;
  box-shadow: 5px 10px 10px 0 rgb(201, 201, 201);
  overflow: hidden;
  transition: 0.5s;
}

.activemoduleitem:focus {
  max-height: 50px;
}

.moduletitle {
  background-color: #003459;
  height: 16px;
  color: white;
  font-size: large;
  padding-left: 1em;
  padding-bottom: 1em;
  padding-top: 0.95em;
  border-radius: 10px 10px 0px 0px;
  overflow: hidden;
  box-shadow: 0 10px 29px 0 rgba(68, 88, 144, 0.1);
}

.moduletitle:hover {
  background-color: #002136;
}

.modulecontents {
  /* border: 1px solid #003459; */
  background-color: whitesmoke;
  box-shadow: 0 10px 29px 0 rgba(68, 88, 144, 0.1);
  box-shadow: 0 10px 29px 0 rgba(68, 88, 144, 0.1);
}

.modulecontentitem {
  padding-left: 3em;
  padding-top: 1vh;
  padding-bottom: 1vh;
  padding-right: 3em;
  border-bottom: 2px black;
  cursor: pointer;
  border-left: 5px solid white;
  background-color: white;
  font-size: large;
}

.modulecontentitem:hover {
  background-color: rgb(230, 230, 230);
  padding-left: 3em;
  padding-top: 1vh;
  padding-bottom: 1vh;
  padding-right: 3em;
  border-left: 5px solid rgb(230, 230, 230);
  border-bottom: 2px black;
  font-size: large;
}

.Vmodulecontentitem {
  padding-left: 3em;
  padding-top: 1vh;
  padding-bottom: 1vh;
  padding-right: 3em;
  border-left: 5px solid red;
  border-bottom: 2px black;
  cursor: pointer;
  font-size: large;
}

.Amodulecontentitem {
  padding-left: 3em;
  padding-top: 1vh;
  padding-bottom: 1vh;;
  padding-right: 3em;
  border-left: 5px solid blue;
  border-bottom: 2px black;
  cursor: pointer;
  font-size: large;
}

.Rmodulecontentitem {
  padding-left: 3em;
  padding-top: 1vh;
  padding-bottom: 1vh;
  padding-right: 3em;
  border-left: 5px solid green;
  border-bottom: 2px black;
  cursor: pointer;
  font-size: large;
}

.Kmodulecontentitem {
  padding-left: 3em;
  padding-top: 1vh;
  padding-bottom: 1vh;
  font-size: large;
  padding-right: 3em;
  border-left: 5px solid purple;
  border-bottom: 2px black;
  cursor: pointer;
  font-size: large;
}

.Vmodulecontentitem:hover {
  background-color: rgb(255, 200, 209);
}

.Amodulecontentitem:hover {
  background-color: rgb(200, 200, 255);
}

.Rmodulecontentitem:hover {
  background-color: rgb(208, 255, 208);
}

.Kmodulecontentitem:hover {
  background-color: rgb(255, 204, 255);
}

.leftalign {
	float: left;
}
.rightalign {
	float: right;
}
.rightalignandfloatdown {
  float: right;
  position: relative;
  top: 50px;
  left: 75px;
}
.floatdown {
  position: relative;
  top: 50px;
  left: 75px;
}
/* ... */

